Change .gitignore to exclude large file outputs and all materials in the data folder

--- a/EPM/EPM_wsgrid.ipynb
+++ b/EPM/EPM_wsgrid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "professional-nursing",
+   "id": "unsigned-fifth",
    "metadata": {},
    "source": [
     "# Bear Spring EPM (Equivalent Porous Media) Model\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "seventh-talent",
+   "id": "hired-mitchell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "geological-aurora",
+   "id": "weighted-great",
    "metadata": {},
    "source": [
     "## Load External Data\n",
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "id": "operating-theme",
+   "execution_count": 2,
+   "id": "sorted-aging",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "english-forest",
+   "id": "difficult-neutral",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "christian-violin",
+   "id": "breeding-truth",
    "metadata": {},
    "outputs": [
     {
@@ -191,15 +191,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "exempt-haven",
+   "execution_count": 5,
+   "id": "balanced-mountain",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_671832/4032301334.py:14: UserWarning: Legend does not support handles for PatchCollection instances.\n",
+      "/tmp/ipykernel_1233405/4032301334.py:14: UserWarning: Legend does not support handles for PatchCollection instances.\n",
       "See: https://matplotlib.org/stable/tutorials/intermediate/legend_guide.html#implementing-a-custom-legend-handler\n",
       "  plt.legend()\n"
      ]
@@ -207,10 +207,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f40d2328e20>"
+       "<matplotlib.legend.Legend at 0x7fa57c7496c0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "current-smooth",
+   "id": "royal-bench",
    "metadata": {},
    "source": [
     "## Create the MODFLOW Model Grid\n",
@@ -254,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "breathing-occupation",
+   "execution_count": 6,
+   "id": "nominated-forwarding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,8 +277,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "numeric-contrary",
+   "execution_count": 7,
+   "id": "straight-diploma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,17 +299,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "valued-module",
+   "execution_count": 8,
+   "id": "growing-equilibrium",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f40c7ab9360>"
+       "<matplotlib.colorbar.Colorbar at 0x7fa57ae2f8b0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "modular-stupid",
+   "id": "executive-working",
    "metadata": {},
    "source": [
     "## Assign Aquifer Properties"
@@ -370,8 +370,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "rocky-group",
+   "execution_count": 9,
+   "id": "elegant-accent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worthy-funds",
+   "id": "curious-hungarian",
    "metadata": {},
    "source": [
     "## Build and Run the Simulation"
@@ -398,8 +398,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "silver-metabolism",
+   "execution_count": 10,
+   "id": "standard-advocacy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,8 +503,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "popular-sally",
+   "execution_count": 11,
+   "id": "geographic-entry",
    "metadata": {},
    "outputs": [
     {
@@ -534,8 +534,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "crucial-simulation",
+   "execution_count": 12,
+   "id": "finished-personal",
    "metadata": {},
    "outputs": [
     {
@@ -566,15 +566,15 @@
       " \n",
       " MODFLOW runs in SEQUENTIAL mode\n",
       " \n",
-      " Run start date and time (yyyy/mm/dd hh:mm:ss): 2024/11/13 12:47:30\n",
+      " Run start date and time (yyyy/mm/dd hh:mm:ss): 2024/11/13 13:13:31\n",
       " \n",
       " Writing simulation list file: mfsim.lst\n",
       " Using Simulation name file: mfsim.nam\n",
       " \n",
       "    Solving:  Stress period:     1    Time step:     1\n",
       " \n",
-      " Run end date and time (yyyy/mm/dd hh:mm:ss): 2024/11/13 12:47:34\n",
-      " Elapsed run time:  3.849 Seconds\n",
+      " Run end date and time (yyyy/mm/dd hh:mm:ss): 2024/11/13 13:13:35\n",
+      " Elapsed run time:  3.805 Seconds\n",
       " \n",
       " Normal termination of simulation.\n"
      ]
@@ -585,7 +585,7 @@
        "(True, [])"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defensive-sixth",
+   "id": "prescribed-running",
    "metadata": {},
    "source": [
     "## Post Process the model outputs"
@@ -605,8 +605,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "existing-frederick",
+   "execution_count": 13,
+   "id": "included-catalog",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,8 +619,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "extensive-algeria",
+   "execution_count": 14,
+   "id": "municipal-million",
    "metadata": {},
    "outputs": [
     {
